--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,7 @@
     "axios": "^0.18.1",
     "bootstrap": "^3.4.1",
     "moment": "^2.22.2",
-    "node-sass-chokidar": "^1.3.5",
+    "node-sass-chokidar": "^1.5.0",
     "npm-run-all": "^4.1.2",
     "postcss-normalize": "^8.0.1",
     "react": "^16.8.6",
@@ -16,7 +16,7 @@
     "react-maskedinput": "^4.0.1",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "3.0.1",
+    "react-scripts": "^4.0.0",
     "react-svg": "^6.0.15"
   },
   "scripts": {
